add a simple search for map

--- a/FIT5032_Assignment/Content/css.css
+++ b/FIT5032_Assignment/Content/css.css
@@ -93,5 +93,5 @@
 }
 .centeredImageContainer {
     display: grid;
-    place-items: center; /* This centers content both horizontally and vertically */
+    place-items: center; 
 }
