--- a/FIT5032_Assignment/Views/Clinics/Index.cshtml
+++ b/FIT5032_Assignment/Views/Clinics/Index.cshtml
@@ -137,7 +137,7 @@
         <div class="col-2">
             @Html.ActionLink("Export to CSV", "ExportAppointmentsToCSV", null, new { @class = "btn btn-primary mb-3" })
             @Html.ActionLink("Export to PDF", "ExportAppointmentsToPDF", null, new { @class = "btn btn-primary mb-3" })
-            @Html.ActionLink("Export to TXT", "ExportAppointmentsToTXT", null, new { @class = "btn btn-primary" })
+            @Html.ActionLink("Export to Excel", "ExportAppointmentsToExcel", null, new { @class = "btn btn-primary" })
 
         </div>
 
