--- a/FIT5032_Assignment/Views/Shared/_Layout.cshtml
+++ b/FIT5032_Assignment/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Chat Hub", "ChatHub", "Home", new { area = "" }, new { @class = "nav-link deep-font-color" })</li>
+                        <li>@Html.ActionLink("Forum", "Index", "ForumPosts", new { area = "" }, new { @class = "nav-link deep-font-color" })</li>
 
                         if (User.IsInRole("Patient"))
                         {
