--- a/FIT5032_Assignment/Views/Shared/_Layout.cshtml
+++ b/FIT5032_Assignment/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark gradient-custom">
         <div class="container">
-            @Html.ActionLink("UltraScan", "Index", "Home", new { area = "" }, new { @class = "navbar-brand deep-font-color" })
+            @Html.ActionLink("UltraConnect", "Index", "Home", new { area = "" }, new { @class = "navbar-brand deep-font-color" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
 
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Forum", "Index", "ForumPosts", new { area = "" }, new { @class = "nav-link deep-font-color" })</li>
+                        <li>@Html.ActionLink("Chat Hub", "ChatHub", "Home", new { area = "" }, new { @class = "nav-link deep-font-color" })</li>
 
                         if (User.IsInRole("Patient"))
                         {
